--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="/index.html">Andrej Jovanovic</a></h1>
+						<h1>Andrej Jovanovic</h1>
 					</header>
 					{{ content}} 
 				<!-- Footer -->
