--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 			  function gtag(){dataLayer.push(arguments);}
 			  gtag('js', new Date());
 
-			  gtag('config', 'G-Z2NSNRWJ4P');
+			  gtag('config', 'G-48JBF9S90M');
 			</script>
 
 	</body>
