--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,23 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="/index.html">Andrej Jovanovic</a></h1>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
 					</header>
+					<nav id="menu">
+						<div class="inner">
+							<h2>Menu</h2>
+							<ul class="links">
+								<li><a href="/index.html">Home</a></li>
+								<li><a href="https://github.com/maddox-j">Projects</a></li>
+								<li><a href="/blogposts.html">Blog Posts</a></li>
+								<li><a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/">LinkedIn</a></li>
+								<li><a href="mailto:andrej@jovanovic.co.za">Email Me</a></li>
+							</ul>
+							<a class="close">Close</a>
+						</div>
+					</nav>
 					{{ content}} 
 				<!-- Footer -->
 					<section id="footer">
@@ -30,7 +46,7 @@
 							<h2 class="major">Get in touch</h2>
 							<p>Please do not hestitate to get in touch with me if you have any questions regarding my projects, or if you would like to connect professionally.</p>
 							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="mailto: andrej@jovanovic.co.za">andrej@jovanovic.co.za</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:andrej@jovanovic.co.za">andrej@jovanovic.co.za</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/">https://www.linkedin.com/in/andrej-jovanovic</a></li>
 								<li class="icon brands fa-github-alt"><a href="https://github.com/maddox-j">https://github.com/maddox-j</a></li>
 							</ul>
