Added RecyclEd article

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 </section>
 <section id="wrapper">
 <!-- Content -->
-	<div class="wrapper">
+	<div class="wrapper style2">
 		<div class="inner">
 			{{ content }}
 		</div>
