--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3689,6 +3689,7 @@ input, select, textarea {
 			padding: 3em 0 1em 0 ;
 			margin: 0 auto;
 			width: 55em;
+			overflow: scroll;
 		}
 
 		.wrapper.style2 {
