--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 								<li><a href="https://github.com/maddox-j">Projects</a></li>
 								<li><a href="/blogposts.html">Blog Posts</a></li>
 								<li><a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/">LinkedIn</a></li>
-								<li><a href="mailto:tbc">Email Me</a></li>
+								<li><a href="mailto:contact.me.maddox@gmail.com">Email Me</a></li>
 							</ul>
 							<a class="close">Close</a>
 						</div>
@@ -46,7 +46,7 @@
 							<h2 class="major">Get in touch</h2>
 							<p>Please do not hestitate to get in touch with me if you have any questions regarding my projects, or if you would like to connect professionally.</p>
 							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="mailto:tbc">tbc</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:contact.me.maddox@gmail.com">contact.me.maddox@gmail.com</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/">https://www.linkedin.com/in/andrej-jovanovic</a></li>
 								<li class="icon brands fa-github-alt"><a href="https://github.com/maddox-j">https://github.com/maddox-j</a></li>
 							</ul>
