Add google verification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="icon" href="/images/codefavicon.ico">
 		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
+		<meta name="google-site-verification" content="JXg9Q8imSo-cGLAZTyLDawUAg3dEV0jU2crqv8DDc2g" />
 	</head>
 	<body class="is-preload">
 
