--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -3,7 +3,11 @@
         <summary> Read research overview</summary>
         <div class="research_details_text">
             <p>
-                Coming soon...
+                My current research focuses on the applicability of NLP tools to different use cases, and methods for
+                efficient machine learning.
+                <br><br>
+                More coming soon.
+
             </p>
         </div>
     </details>
