--- a/_includes/02__gallery.html
+++ b/_includes/02__gallery.html
@@ -1,9 +1,15 @@
 <div class="container roww" style="margin-left: 9%; margin-right: 10%;">
     <div class="gallery">
-        <a target="_blank" href="https://github.com/maddox-j/project-thola">
+        <a href="{{ site.baseurl }}/notes/twitter_rumour_detection.html">
             <img src="{{ site.baseurl }}/assets/img/thola.png">
         </a>
         <div class="desc">twitter rumour detection browser extension</div>
+    </div>
+    <div class="gallery">
+        <a href="{{ site.baseurl }}/notes/edac.html">
+            <img src="{{ site.baseurl }}/assets/img/pruning.gif" style="filter: invert()">
+        </a>
+        <div class="desc">edac - efficient deployment of audio classification models for covid-19 detection</div>
     </div>
     <div class="gallery">
         <a href="{{ site.baseurl }}/notes/recycled.html">
@@ -17,12 +23,6 @@
             <img src="{{ site.baseurl }}/assets/img/just_eat.jpg">
         </a>
         <div class="desc">justeatcycles covid-19 analysis</div>
-    </div>
-    <div class="gallery">
-        <a target="_blank" href="https://github.com/maddox-j/ilp">
-            <img src="{{ site.baseurl }}/assets/img/ilp.png" style="filter: invert()">
-        </a>
-        <div class="desc">cost-constrained root finding</div>
     </div>
     <style>
         div.gallery {
