--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -28,11 +28,13 @@
                 contains 'ovw' or page.url contains 'pres'%}
                 <li><a class="page-scroll" href="{{site.baseurl}}/#research">Research</a></li>
                 <li><a class="page-scroll" href="{{site.baseurl}}/#notes_main">Projects</a></li>
+                <li><a class="page-scroll" href="{{site.baseurl}}/#education">Education</a></li>
                 <li><a class="page-scroll" href="{{site.baseurl}}/#experience">Experience</a></li>
 
                 {% else %}
                 <li><a class="page-scroll" href="#research">Research</a></li>
                 <li><a class="page-scroll" href="#notes_main">Projects</a></li>
+                <li><a class="page-scroll" href="#education">Education</a></li>
                 <li><a class="page-scroll" href="#experience">Experience</a></li>
                 {% endif %}
 
