--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -23,11 +23,19 @@
         </div>
     </section>
 
+    <section id="education" class="container content-section">
+        <div class="col-lg-64 col-lg-offset-0">
+            {% include 04_education.html %}
+        </div>
+    </section>
+
     <section id="experience" class="container content-section">
         <div class="col-lg-64 col-lg-offset-0">
             {% include 03_experience.html %}
         </div>
     </section>
+
+
 
 </body>
 <footer>
