--- a/_includes/03_experience.html
+++ b/_includes/03_experience.html
@@ -7,6 +7,25 @@
         </div>
         <div class="timeline-panel">
             <div class="timeline-heading">
+                <p>Summer 23 - Summer 23</p>
+                <h4 class="subheading">jp morgan chase & co. <a href="https://sjmoran.github.io/">(Applied
+                        Innovation of
+                        Artificial Intelligence (AI<sup>2</sup>))</a></h4>
+            </div>
+            <div class="timeline-body">
+                <p>Sitting within the applied AI research team, developed
+                    unsupervised learning methods for anomaly detection, and assisted with a novel neural network
+                    pruning scheme.</p>
+            </div>
+        </div>
+    </li>
+
+    <li>
+        <div class="timeline-image">
+            <img class="img-circle img-responsive" src="{{ site.baseurl }}/assets/img/jpmc.jpg" alt="">
+        </div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
                 <p>Summer 22 - Summer 22</p>
                 <h4 class="subheading">jp morgan chase & co. <a href="https://sjmoran.github.io/">(Applied
                         Innovation of
