--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -20,7 +20,7 @@
                 <p class="title" style="font-size: 60px"> {{ page.title | downcase }} </p>
                 <div style="width:25px; display:inline-block; height:auto;"></div>
                 <a class="btn btn-success" style="float:left;   text-transform: lowercase;"
-                    href="https://github.com/csinva/csinva.github.io/blob/master/{{ page.path }}">view markdown <i
+                    href="https://github.com/maddox-j/maddox-j.github.io/blob/main/{{ page.path }}">view markdown <i
                         class="fa fa-github fa-fw"></i></a>
 
                 <br />
