--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -85,7 +85,7 @@
     </thead>
     <tbody>
         <tr>
-            <td class="center">'23</td>
+            <td class="center">2023</td>
             <td>Coming soon..
             </td>
             <td></td>
