New website version

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -18,19 +18,24 @@
                             thinking about nlp and efficient ml deployment 🤔
                         </p>
                         <ul class="list-inline social-buttons">
-                            <li><a href=""><i class="fa fa-graduation-cap fa-fw"></i></a></li>
-                            <li><a href="mailto:contact.me.maddox@gmail.com"><i class="fa fa-envelope fa-fw"></i></a>
+                            <li><a target="_blank" href="https://scholar.google.com/citations?user=XGkg1t0AAAAJ&hl=en"><i class="fa fa-graduation-cap fa-fw"></i></a></li>
+                            <li><a target="_blank" href="mailto:contact.me.maddox@gmail.com"><i
+                                        class="fa fa-envelope fa-fw"></i></a>
                             </li>
                             <li><a href="">cv</a></li>
-                            <li><a href="https://github.com/maddox-j"><i class="fa fa-github fa-fw"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/"><i
+                            <li><a target="_blank" href="https://github.com/maddox-j"><i
+                                        class="fa fa-github fa-fw"></i></a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/"><i
                                         class="fa fa-linkedin fa-fw"></i></a>
                             </li>
+                            <li><a target="_blank" href="https://twitter.com/itsmaddox_j"><i
+                                class="fa fa-twitter fa-fw"></i></a>
+                    </li>
                         </ul>
                         <br>
                         <p class="intro-text">
                             budding machine learning researcher;
-                            member of the <a href="https://cohere.for.ai/"> cohere for ai</a> community.
+                            member of the <a target="_blank" href="https://cohere.for.ai/"> cohere for ai</a> community.
 
                         </p>
 
