--- a/_includes/02__gallery.html
+++ b/_includes/02__gallery.html
@@ -1,11 +1,5 @@
-<div class="container roww" style="margin-left: 9%; margin-right: 10%;">
-    <div class="gallery">
-        <a href="{{ site.baseurl }}/notes/twitter_rumour_detection.html">
-            <img src="{{ site.baseurl }}/assets/img/thola.png">
-        </a>
-        <div class="desc">twitter rumour detection browser extension</div>
-    </div>
-    <div class="gallery">
+<div class="container roww" style="margin-left: 20%; margin-right: 10%;">
+    <!-- <div class="gallery">
         <a href="{{ site.baseurl }}/notes/edac.html">
             <img src="{{ site.baseurl }}/assets/img/pruning.gif" style="filter: invert()">
         </a>
@@ -23,7 +17,7 @@
             <img src="{{ site.baseurl }}/assets/img/just_eat.jpg">
         </a>
         <div class="desc">justeatcycles covid-19 analysis</div>
-    </div>
+    </div> -->
     <style>
         div.gallery {
             margin: 2px;
@@ -50,16 +44,4 @@
             font-size: medium;
         }
     </style>
-</div>
-<div>
-    <p align="center">
-        <i align="center">Additionally, I also provide <a href="{{ site.baseurl }}/notes/maths_tutoring.html"> private
-                maths
-                tutoring.</a>
-        </i>
-    </p>
-    <a target="_blank" href="{{ site.baseurl }}/notes/maths_tutoring.html">
-        <img style="display: block; margin-left: auto; margin-right: auto; border-radius: 5%; height: 230px;"
-            src=" {{ site.baseurl }}/assets/img/maths.gif">
-    </a>
 </div>
