--- a/_includes/02_notes_main.html
+++ b/_includes/02_notes_main.html
@@ -1,11 +1,55 @@
-<h2 align="center" style="margin-top: -150px;"> projects </h2>
+<h2 align="center" style="margin-top: -150px;"> resources + posts </h2>
 
+<!--{% comment %}-->
+<!--{% include 02__carousel.html %}-->
+<!--{% endcomment %}-->
 
 {% include 02__gallery.html %}
 
 </br>
 </br>
+<!--<div class="colfull">-->
+<!--    <p align="text-center">-->
+<!--        <i align="left">Some posts/slides organizing ml and ai research.</i>-->
+<!--    </p>-->
+<!--</div>-->
 
+<div class="coll3">
+    <h3 align="center">slides</h3>
+    <ul class="list-items">
+        <li><a href="{{ site.baseurl }}/notes/why-greatness-cannot-be-planned.html" style="font-size:medium"> "why
+                greatness cannot be planned" </a>
+        </li>
+    </ul>
+
+</div>
+
+<div class="coll3">
+    <h3 align="center">teaching</h3>
+    <ul class="list-items">
+        <li><a href="{{ site.baseurl }}/notes/ngram.html" style="font-size:medium"> n-gram language modelling
+            </a>
+        </li>
+        <li><a href="{{ site.baseurl }}/notes/maths_tutoring.html" style="font-size:medium"> mathematics tutoring
+            </a>
+        </li>
+    </ul>
+</div>
+
+<div class="coll3">
+    <h3 align="center">miscellaneous projects</h3>
+    <ul class="list-items">
+        <li><a href="{{ site.baseurl }}/notes/recycled.html" style="font-size:medium"> resnet reverse recycling
+                machine
+            </a>
+        </li>
+        <li><a target="_blank" href="https://github.com/maddox-j/justeatscycles-covid19" style="font-size:medium">
+                justeatcycles covid-19 analysis
+            </a>
+        </li>
+    </ul>
+
+</div>
 <style>
     .colfull {
         float: left;
