--- a/_includes/03_experience.html
+++ b/_includes/03_experience.html
@@ -8,14 +8,14 @@
         <div class="timeline-panel">
             <div class="timeline-heading">
                 <p>Summer 2023 - Summer 2023</p>
-                <h4 class="subheading">jp morgan chase & co. <a href="https://sjmoran.github.io/">(Applied
+                <h4 class="subheading">jp morgan chase & co. <a target="_blank"
+                        href="https://sjmoran.github.io/">(Applied
                         Innovation of
                         Artificial Intelligence (AI<sup>2</sup>))</a></h4>
             </div>
             <div class="timeline-body">
-                <p>Sitting within the applied AI research team, developed
-                    unsupervised learning methods for anomaly detection, and assisted with a novel neural network
-                    pruning scheme.</p>
+                <p>Developed unsupervised learning methods, with an associated parallel data processing pipeline,
+                    for anomaly detection which increased previous performance by 30%.</p>
             </div>
         </div>
     </li>
@@ -27,7 +27,8 @@
         <div class="timeline-panel">
             <div class="timeline-heading">
                 <p>Summer 2022 - Summer 2022</p>
-                <h4 class="subheading">jp morgan chase & co. <a href="https://sjmoran.github.io/">(Applied
+                <h4 class="subheading">jp morgan chase & co. <a target="_blank"
+                        href="https://sjmoran.github.io/">(Applied
                         Innovation of
                         Artificial Intelligence (AI<sup>2</sup>))</a></h4>
             </div>
