--- a/_includes/04_education.html
+++ b/_includes/04_education.html
@@ -12,7 +12,7 @@
             </div>
             <div class="timeline-body">
                 <p>
-                    (mphil) machine learning and machine intelligence, specialising in speech and language processing.
+                    (mphil) machine learning and machine intelligence, specialising in speech and language processing in the <a target="_blank" href="https://mi.eng.cam.ac.uk/">MIL Lab</a>.
                 </p>
             </div>
         </div>
@@ -28,7 +28,7 @@
             </div>
             <div class="timeline-body">
                 <p>
-                    bsc(hons) artificial intelligence and computer science
+                    bsc(hons) artificial intelligence and computer science. thesis completed under the supervision of <a target="_blank" href="https://sweb.inf.ed.ac.uk/bross3/">björn ross</a>
                 </p>
             </div>
         </div>
