--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -79,7 +79,7 @@
     <tbody>
         <tr>
             <td class="center">2023</td>
-            <td>Rumour Detecion in the Wild: A Browser Extension for Twitter
+            <td>Rumour Detection in the Wild: A Browser Extension for Twitter
             </td>
             <td>jovanović & ross</td>
             <td class="med">💻🗣️🌀</td>
