--- a/_includes/02_notes_main.html
+++ b/_includes/02_notes_main.html
@@ -15,7 +15,7 @@
 <!--</div>-->
 
 <div class="coll3">
-    <h3 align="center">slides</h3>
+    <h3 align="center">presentations</h3>
     <ul class="list-items">
         <li><a href="{{ site.baseurl }}/notes/why-greatness-cannot-be-planned.html" style="font-size:medium"> "why
                 greatness cannot be planned" </a>
