Add RDITW paper

--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -83,7 +83,7 @@
             </td>
             <td>jovanović & ross</td>
             <td class="med">💻🗣️🌀</td>
-            <td class="center"><a href="https://openreview.net/forum?id=9akS9IBfKs">NLP-OSS @ EMNLP2023</a></td>
+            <td class="center"><a target="_blank" href="https://openreview.net/forum?id=9akS9IBfKs">NLP-OSS @ EMNLP2023</a></td>
             <td class="big"><a target="_blank" href="https://github.com/maddox-j/rumour_detection_in_the_wild"><i
                         class="fa fa-github fa-fw"></i></a>
             <td class="med">
