--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -33,7 +33,7 @@
                     text: '🗣️ nlp',
                     action: function (e, dt, node, config) {
                         $(".dataTables_wrapper input").val(function () {
-                            return this.value + "🌀";
+                            return this.value + "🗣️";
                         });
                     }
                 },
