--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -87,6 +87,7 @@
             <td class="big"><a target="_blank" href="https://github.com/maddox-j/rumour_detection_in_the_wild"><i
                         class="fa fa-github fa-fw"></i></a>
             <td class="med">
+                <a target="_blank" href="https://aclanthology.org/2023.nlposs-1.15/"><i></i>ACL</a>
             </td>
         </tr>
         <tr>
