--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -22,7 +22,7 @@
                             <li><a target="_blank" href="mailto:contact.me.maddox@gmail.com"><i
                                         class="fa fa-envelope fa-fw"></i></a>
                             </li>
-                            <li><a href="">cv</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1EsdBzzSwZFkMC5viK3LIm67-jK3qYUdD/view?usp=sharing">cv</a></li>
                             <li><a target="_blank" href="https://github.com/maddox-j"><i
                                         class="fa fa-github fa-fw"></i></a></li>
                             <li><a target="_blank" href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/"><i
