Update meta data

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 <meta name="google-site-verification" content="JXg9Q8imSo-cGLAZTyLDawUAg3dEV0jU2crqv8DDc2g" />
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel='shortcut icon' href='{{ site.baseurl }}/assets/img/codefavicon.ico' type='image/x-icon'>
-<title>{{ site.title }} {% if page.title %} | {{ page.title }}{% endif %}</title>
+<title>{{ site.title }}</title>
 
 <!-- Bootstrap Core CSS -->
 
