--- a/_includes/04_education.html
+++ b/_includes/04_education.html
@@ -12,7 +12,8 @@
             </div>
             <div class="timeline-body">
                 <p>
-                    (mphil) machine learning and machine intelligence, specialising in speech and language processing in the <a target="_blank" href="https://mi.eng.cam.ac.uk/">MIL Lab</a>.
+                <a target="_blank" href="https://www.mlmi.eng.cam.ac.uk/">(mphil) machine learning and machine intelligence</a> specialising in speech and language processing.
+                Thesis exploring Second-order Optimisation and Imbalanced Class Distribution in Emotion Analysis under the supervision of <a target="_blank" href="http://sunbrian.com/">Dr Brian (Guangzhi) Sun</a>.
                 </p>
             </div>
         </div>
