Update research blurb

--- a/_includes/00_about.html
+++ b/_includes/00_about.html
@@ -15,22 +15,26 @@
                     </div>
                     <div class="coll2">
                         <p class="intro-text" style="margin-bottom: 20px;">
-                            thinking about nlp and efficient ml deployment 🤔
+                            thinking about distributed, privacy-preserving and collaborative ml 🤔
                         </p>
                         <ul class="list-inline social-buttons">
-                            <li><a target="_blank" href="https://scholar.google.com/citations?user=XGkg1t0AAAAJ&hl=en"><i class="fa fa-graduation-cap fa-fw"></i></a></li>
+                            <li><a target="_blank"
+                                    href="https://scholar.google.com/citations?user=XGkg1t0AAAAJ&hl=en"><i
+                                        class="fa fa-graduation-cap fa-fw"></i></a></li>
                             <li><a target="_blank" href="mailto:contact.me.maddox@gmail.com"><i
                                         class="fa fa-envelope fa-fw"></i></a>
                             </li>
-                            <li><a target="_blank" href="https://drive.google.com/file/d/1EsdBzzSwZFkMC5viK3LIm67-jK3qYUdD/view?usp=sharing">cv</a></li>
+                            <li><a target="_blank"
+                                    href="https://drive.google.com/file/d/1EsdBzzSwZFkMC5viK3LIm67-jK3qYUdD/view?usp=sharing">cv</a>
+                            </li>
                             <li><a target="_blank" href="https://github.com/maddox-j"><i
                                         class="fa fa-github fa-fw"></i></a></li>
                             <li><a target="_blank" href="https://www.linkedin.com/in/andrej-jovanovi%C4%87/"><i
                                         class="fa fa-linkedin fa-fw"></i></a>
                             </li>
                             <li><a target="_blank" href="https://twitter.com/itsmaddox_j"><i
-                                class="fa fa-twitter fa-fw"></i></a>
-                    </li>
+                                        class="fa fa-twitter fa-fw"></i></a>
+                            </li>
                         </ul>
                         <br>
                         <p class="intro-text">
