--- a/_includes/04_education.html
+++ b/_includes/04_education.html
@@ -12,8 +12,10 @@
             </div>
             <div class="timeline-body">
                 <p>
-                <a target="_blank" href="https://www.mlmi.eng.cam.ac.uk/">(mphil) machine learning and machine intelligence</a> specialising in speech and language processing.
-                Thesis exploring Second-order Optimisation and Imbalanced Class Distribution in Emotion Analysis under the supervision of <a target="_blank" href="http://sunbrian.com/">Dr Brian (Guangzhi) Sun</a>.
+                    <a target="_blank" href="https://www.mlmi.eng.cam.ac.uk/">(mphil) machine learning and machine
+                        intelligence</a> specialising in speech and language processing.
+                    Thesis exploring Second-order Optimisation and Imbalanced Class Distribution in Emotion Analysis
+                    under the supervision of <a target="_blank" href="http://sunbrian.com/">Dr Brian (Guangzhi) Sun</a>.
                 </p>
             </div>
         </div>
@@ -29,7 +31,8 @@
             </div>
             <div class="timeline-body">
                 <p>
-                    bsc(hons) artificial intelligence and computer science. thesis completed under the supervision of <a target="_blank" href="https://sweb.inf.ed.ac.uk/bross3/">björn ross</a>
+                    bsc(hons) artificial intelligence and computer science. thesis completed under the supervision of <a
+                        target="_blank" href="https://sweb.inf.ed.ac.uk/bross3/">björn ross</a>
                 </p>
             </div>
         </div>
