--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -34,9 +34,11 @@
             {% include 03_experience.html %}
         </div>
     </section>
-
-
-
+    <section id="collaboration" class="container content-section">
+        <div class="col-lg-64 col-lg-offset-0">
+            {% include 05_collaboration.html %}
+        </div>
+    </section>
 </body>
 <footer>
     <div style="text-align: center;" class="card-footer">Many thanks to <a
