--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -30,12 +30,14 @@
                 <li><a class="page-scroll" href="{{site.baseurl}}/#notes_main">Projects</a></li>
                 <li><a class="page-scroll" href="{{site.baseurl}}/#education">Education</a></li>
                 <li><a class="page-scroll" href="{{site.baseurl}}/#experience">Experience</a></li>
+                <li><a class="page-scroll" href="{{site.baseurl}}/#collaboration">Collaboration</a></li>
 
                 {% else %}
                 <li><a class="page-scroll" href="#research">Research</a></li>
                 <li><a class="page-scroll" href="#notes_main">Projects</a></li>
                 <li><a class="page-scroll" href="#education">Education</a></li>
                 <li><a class="page-scroll" href="#experience">Experience</a></li>
+                <li><a class="page-scroll" href="#collaboration">Collaboration</a></li>
                 {% endif %}
 
             </ul>
