Add DLI materials

--- a/_includes/02_notes_main.html
+++ b/_includes/02_notes_main.html
@@ -30,6 +30,9 @@
 <div class="coll3">
     <h3 align="center">teaching</h3>
     <ul class="list-items">
+        <li><a href="{{ site.baseurl }}/notes/fl-dli.html" style="font-size:medium"> dli federated learning practical
+            </a>
+        </li>
         <li><a href="{{ site.baseurl }}/notes/ngram.html" style="font-size:medium"> n-gram language modelling
             </a>
         </li>
