Update experience - ISTA

--- a/_includes/03_experience.html
+++ b/_includes/03_experience.html
@@ -3,6 +3,25 @@
 <ul class="timeline">
     <li>
         <div class="timeline-image">
+            <img class="img-circle" src="{{ site.baseurl }}/assets/img/ista.png" alt=""
+                style="border-radius: 85%; width: 100%; height: 100%;">
+        </div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <p>Oct 2024 - March 2025</p>
+                <h4 class="subheading">institute of science and technology austria <a target="_blank"
+                        href="https://ist.ac.at/en/research/alistarh-group/">Alistarh Group</a></h4>
+            </div>
+            <div class="timeline-body">
+                <p>Working as a research assistant under the supervision of <a target="_blank"
+                        href="https://ist.ac.at/en/research/alistarh-group/">Dan Alistarh</a> in the Distributed
+                    Algorithms and Systems (DAS)
+                    group focusing on federated learning applied to large scale models. </p>
+            </div>
+        </div>
+    </li>
+    <li>
+        <div class="timeline-image">
             <img class="img-circle img-responsive" src="{{ site.baseurl }}/assets/img/jpmc.jpg" alt="">
         </div>
         <div class="timeline-panel">
