--- a/_includes/04_education.html
+++ b/_includes/04_education.html
@@ -15,7 +15,7 @@
                     <a target="_blank" href="https://www.mlmi.eng.cam.ac.uk/">(mphil) machine learning and machine
                         intelligence</a> specialising in speech and language processing.
                     Thesis exploring Second-order Optimisation and Imbalanced Class Distribution in Emotion Analysis
-                    under the supervision of <a target="_blank" href="http://sunbrian.com/">Dr Brian (Guangzhi) Sun</a>.
+                    under the supervision of <a target="_blank" href="http://sunbrian.com/">Brian (Guangzhi) Sun</a>.
                 </p>
             </div>
         </div>
