--- a/_includes/01_research.html
+++ b/_includes/01_research.html
@@ -92,6 +92,19 @@
     </thead>
     <tbody>
         <tr>
+            <td class="center">2024</td>
+            <td>Panza: A personal email assistant, trained and running on-device
+            </td>
+            <td>alistarh, iofinova, jovanović, kurtic, markov, nicolicioiu, nikdan, panferov, shavit, yang.</td>
+            <td class="med">💻🗣️🌀</td>
+            <td class="center"><a target="_blank" href="https://arxiv.org/pdf/2407.10994">arxiv</a></td>
+            <td class="big"><a target="_blank" href="https://github.com/IST-DASLab/PanzaMail"><i
+                        class="fa fa-github fa-fw"></i></a>
+            <td class="med">
+                <a target="_blank" href="https://www.youtube.com/watch?v=Yn96riyPx2k&t=28s"><i></i>bonus video</a>
+            </td>
+        </tr>
+        <tr>
             <td class="center">2023</td>
             <td>Rumour Detection in the Wild: A Browser Extension for Twitter
             </td>
