--- a/_includes/03_experience.html
+++ b/_includes/03_experience.html
@@ -3,7 +3,7 @@
 <ul class="timeline">
     <li>
         <div class="timeline-image">
-            <img class="img-circle" src="{{ site.baseurl }}/assets/img/ista.png" alt=""
+            <img class="img-circle" src="{{ site.baseurl }}/assets/img/das_logo_blue.png" alt=""
                 style="border-radius: 85%; width: 100%; height: 100%;">
         </div>
         <div class="timeline-panel">
